force-app/main/default/objects/Account/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <label>Account Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>