force-app/main/default/objects/Account/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>TextArea</type>
</CustomField>