force-app/main/default/objects/Account/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <formula>(
 VALUE(LEFT(Duration__c, 2)) * 60
) +
(
 VALUE(MID(Duration__c, 4, 2))
) +
(
 VALUE(RIGHT(Duration__c, 2)) / 60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>