force-app/main/default/objects/Account/fields/Finiancial_Proof__c.field-meta.xml
<CustomField>
    <fullName>Finiancial_Proof__c</fullName>
    <label>Finiancial Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>ADHAAR</fullName>
            </value>
            <value>
                <fullName>TAN</fullName>
            </value>
            <value>
                <fullName>TIN</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>