force-app/main/default/objects/Account/fields/formula_field__c.field-meta.xml
<CustomField>
    <fullName>formula_field__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula field</label>
    <type>Date</type>
</CustomField>