force-app/main/default/objects/Account/fields/HighActivity__c.field-meta.xml
<CustomField>
    <fullName>HighActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Activity</label>
    <type>Checkbox</type>
</CustomField>