force-app/main/default/objects/Account/fields/Hospital_1__c.field-meta.xml
<CustomField>
    <fullName>Hospital_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital 1</label>
    <referenceTo>Hospital_1__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>