force-app/main/default/objects/Account/fields/Identity_Proof__c.field-meta.xml
<CustomField>
    <fullName>Identity_Proof__c</fullName>
    <label>Identity Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Adhaar</fullName>
            </value>
            <value>
                <fullName>Voter Id</fullName>
            </value>
            <value>
                <fullName>Registration Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>