force-app/main/default/objects/Account/fields/MemberRESNumber__c.field-meta.xml
<CustomField>
    <fullName>MemberRESNumber__c</fullName>
    <externalId>true</externalId>
    <label>Member ARES Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>