force-app/main/default/objects/Account/fields/Number_of_New_Case__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Case__c</fullName>
    <label>Number of New Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>