force-app/main/default/objects/Account/fields/numberOfCaseCount__c.field-meta.xml
<CustomField>
    <fullName>numberOfCaseCount__c</fullName>
    <label>Number of Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>