force-app/main/default/objects/Account/fields/Rating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rating_Notes__c</fullName>
    <label>Rating Notes</label>
    <length>240</length>
    <type>Text</type>
</CustomField>