force-app/main/default/objects/Account/fields/Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Number__c</fullName>
    <externalId>true</externalId>
    <label>Unique Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>