force-app/main/default/objects/Account/recordTypes/Current.recordType-meta.xml
<RecordType>
    <fullName>Current</fullName>
    <active>true</active>
    <label>Current</label>
</RecordType>