force-app/main/default/objects/Account/validationRules/Account_length_is_Greater_than_3_Char.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_length_is_Greater_than_3_Char</fullName>
    <active>true</active>
    <description>Account Name should be more than three characters.</description>
    <errorConditionFormula>$Profile.Name !=&apos;System Administrator&apos; &amp;&amp; LEN(Name) &lt; 4</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name should be more than three characters.</errorMessage>
</ValidationRule>