force-app/main/default/objects/Account/validationRules/Update_Account_Industry_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Account_Industry_Field</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				 OR(
									ISPICKVAL(Type, &apos;Customer - Direct&apos;), 
				     ISPICKVAL(Type, &apos;Customer - Channel&apos;)),
				  NOT(ISPICKVAL(Industry, &apos;Healthcare&apos;))
   )</errorConditionFormula>
    <errorMessage>industry value should be Healthcare when the Industry type is Customer.</errorMessage>
</ValidationRule>