force-app/main/default/objects/Account/validationRules/VR_for_Rating_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_for_Rating_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Rating) &amp;&amp; NOT(ISCHANGED(Rating_Notes__c))</errorConditionFormula>
    <errorMessage>Please change the Value of the Rating Notes</errorMessage>
</ValidationRule>