force-app/main/default/objects/Account/validationRules/VR_on_Account_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_on_Account_Rating</fullName>
    <active>true</active>
    <description>If the Rating is Hot then the Website contains the Value.</description>
    <errorConditionFormula>ISPICKVAL(Rating,&apos;HOT&apos;) &amp;&amp; ISBLANK(Website)</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>If Rating is Hot website should be Populated</errorMessage>
</ValidationRule>